syntax = "proto3";

package auctioncmd;
// option go_package = "github.com/leagueauctions/server";

import "google/protobuf/timestamp.proto";

message AuctionRequest {
    enum RequestType {
        NONE = 0;  
        FETCH_PLAYER_INFO_BY_USER_UUID = 1;
        FETCH_PLAYER_INFO_BY_PLAYER_UUID = 2;
        UPDATE_PLAYER_INFO = 3;
        CREATE_AUCTION_BOARD = 4;
        UPDATE_AUCTION_BOARD = 5;
        DELETE_AUCTION_BOARD = 6;
        FETCH_AUCTION_BOARD_INFO = 7;
        JOIN_AUCTION = 8;
        CHANGE_PARTICIPANT_ROLE = 9;
        FETCH_PARTICIPANT_LIST = 10;
    }
    RequestType request_type = 1;
    oneof request {
        FetchPlayerInfoByUserUUIDRequest fetch_player_info_by_user_uuid_request = 2;
        FetchPlayerInfoByPlayerUUIDRequest fetch_player_info_by_player_uuid_request = 3;
        UpdatePlayerInfoRequest update_player_info_request = 4;
        CreateAuctionBoardRequest create_auction_board_request = 5;
        UpdateAuctionBoardRequest update_auction_board_request = 6;
        DeleteAuctionBoardRequest delete_auction_board_request = 7;
        FetchAuctionBoardRequest fetch_auction_board_request = 8;
        JoinAuctionBoardRequest join_auction_board_request = 9;
        ChangeParticipantRoleRequest change_participant_role_request = 10;
        FetchParticipantListRequest fetch_participant_list_request = 11;
    }
}


message AuctionResponse {
    enum ResponseType {
        ERROR = 0;  
        FETCH_PLAYER_INFO = 1;
        UPDATE_PLAYER_INFO = 2;
        CREATE_AUCTION_BOARD = 3;
        UPDATE_AUCTION_BOARD = 4;
        DELETE_AUCTION_BOARD = 5;
        FETCH_AUCTION_BOARD = 6;
        JOIN_AUCTION = 7;
        CHANGE_PARTICIPANT_ROLE = 8;
        FETCH_PARTICIPANT_LIST = 9;
    }
    string errormsg = 1;
    ResponseType response_type = 2;
    oneof response {
        FetchPlayerInfoResponse fetch_player_info_response = 3;
        UpdatePlayerInfoResponse update_player_info_response = 4;
        CreateAuctionBoardResponse create_auction_board_response = 5;
        UpdateAuctionBoardResponse update_auction_board_response = 6;
        DeleteAuctionBoardResponse delete_auction_board_response = 7;
        FetchAuctionBoardResponse fetch_auction_board_response = 8;
        JoinAuctionBoardResponse join_auction_board_response = 9;
        ChangeParticipantRoleResponse change_participant_role_response = 10;
        FetchParticipantListResponse fetch_participant_list_response = 11;
    }
}

// ********************* Player profile commands ********************* 
enum PlayerType {
    NONE = 0;
    RIGHT_HANDED_BAT = 1;
    LEFT_HANDED_BAT = 2;
    RIGHT_ARM_BOWL = 3;
    LEFT_ARM_BOWL = 4;
    BATTING_ALL_ROUNDER = 5;
    BOWLING_ALL_ROUNDER = 6;
}

message FetchPlayerInfoByUserUUIDRequest {
    string user_uuid = 1;
}

message FetchPlayerInfoByPlayerUUIDRequest {
    string player_uuid = 1;
}

message FetchPlayerInfoResponse {
    string player_uuid = 1;
    string player_name = 2;
    string player_bio = 3;
    string player_profile_link = 4;
    PlayerType player_type = 5;
    bytes player_picture = 6;
    bool is_player_active = 7;
}


message UpdatePlayerInfoRequest {
    string user_uuid = 1;
    string player_name = 2;
    string player_bio = 3;
    string player_profile_link = 4;
    PlayerType player_type = 5;
    bytes player_picture = 6;
    bool is_player_active = 7;
}

message UpdatePlayerInfoResponse {
    bool update_success = 1;
    string player_uuid = 2;
}

// -----------------------  Auction board messages -----------------------


// message AuctionPlayer {
//     string auction_player_id = 1;
// }

message PlayerCategory{
    string category_name = 1;
    uint64 player_base_price = 2;
    string category_uuid = 3;
    //repeated AuctionPlayer player_id_set = 3;
}

enum ParticipantRole {
    VIEWER = 0;
    PLAYER_UNDER_HAMMER = 1;
    CAPTAIN = 2;
    AUCTIONEER = 3;
    AUCTIONEER_PLAYER = 4;
}

message CreateAuctionBoardRequest {
    string auctioneer_player_uuid = 1;
    string auction_board_name = 2;
    google.protobuf.Timestamp schedule_time = 3;
    uint64 purse_money = 4;
    string purse_ccy = 5;
    repeated PlayerCategory player_category_list = 6;
    // repeated AutionParticipant participant_list = 5;
}

message CreateAuctionBoardResponse {
    string auction_board_uuid = 1;
    uint32 auction_code = 2;
}

message FetchAuctionBoardRequest {
    string auction_board_uuid = 1;
}

message AuctionBoardInfo{
    string auctioneer_player_uuid = 1;
    string auction_board_name = 2;
    google.protobuf.Timestamp schedule_time = 3;
    uint64 purse_money = 4;
    string purse_ccy = 5;
    repeated PlayerCategory player_category_list = 6;
    uint32 auction_code = 7;
    bool is_active = 8;
}

message FetchAuctionBoardResponse{
    AuctionBoardInfo auction_board_info = 1;
}

message DeleteAuctionBoardRequest {
    string auction_board_uuid = 1;
}

message DeleteAuctionBoardResponse{
    bool success = 1;
}


message UpdateAuctionBoardRequest {
    string auction_board_uuid = 1;
    string auction_board_name = 2;
    google.protobuf.Timestamp schedule_time = 3;
    uint64 purse_money = 4;
    string purse_ccy = 5;
}

message UpdateAuctionBoardResponse{
    bool success = 1;
}


message JoinAuctionBoardRequest{
    string auctioneer_player_uuid = 1;
    string auction_board_uuid = 2;
    ParticipantRole participant_role = 3;
    string auction_category_id = 4; //optional player category - set when role = PLAYER_UNDER_HAMMER
}

message JoinAuctionBoardResponse{
    bool success = 1;
}


message ChangeParticipantRoleRequest{
    repeated string auctioneer_player_uuid = 1;
    string auction_board_uuid = 2;
    ParticipantRole participant_role = 3;
    string auction_category_id = 4; //optional player category - set when role = PLAYER_UNDER_HAMMER
}

message ChangeParticipantRoleResponse{
    bool success = 1;
}

message FetchParticipantListRequest{
    string auction_board_uuid = 1;
}

message AuctionParticipant{
    string auctioneer_player_uuid = 1;
    ParticipantRole participant_role = 2;
    string auction_category_id = 3;
}

message FetchParticipantListResponse{
    repeated AuctionParticipant auction_participant_list = 1;
}